File Name: CHANGES

08/28/2022 FASP 2.7.6:
- Prepare for Huawei's test problems;
- Merge different versions;
- Add MKL support for Mac OS X;
- Add METIS and GKlib support;
- Test linking to MUMPS;
- Test linking to MKL Pardiso;
- Add reading subroutine for Huawei's problems;
- Add support to MUMPS and Pardiso; need to test;
- Add Huawei test problems;
- Add DLD test problems.

08/14/2022 FASP 2.7.5:
- Checking return status of UMFPACK;
- Fixing regression test failure of fasp4blkoil.

07/27/2022 FASP 2.7.4:
- Fix Pardiso and Umfpack timer output;
- Test OpenMP for DLD problem.

04/08/2022 FASP 2.7.3:
- Reading input parameters from a file for fasp4ns project;
- Remove unused variables in UMFPACK interface;
- Update Fortran wrapper for Krylov_AMG;

03/08/2022 FASP 2.7.2:
- Fix a bug due the ISNAN macro not recognized by some compilers;
- Use isnan() to replace ISNAN;
- Fix a TeX problem with Doxygen;
- Fix math.lib linkage problem;
- Fix cmake debug mode for Windows;
- Add oneAPI MKL support for Linux;
- Update webpage;
- Update Doxygen.

01/27/2022 FASP 2.7.1:
- Add VS2022 + Intel 2022 oneAPI solution file;
- Fix unused variables and other warnings by oneAPI;
- Update webpage;
- Update Doxygen.

08/14/2021 FASP 2.7.0:
- Update webpage;
- Update warning level in UA AMG;
- Update Doxygen;
- Git becomes public.

05/12/2021 FASP 2.6.8:
- Update README and cmake examples;
- Remove support for VS10 and VS15;
- Update webpage and documentation;
- Update VS19 setting with more aggressive optimization;
- Change README to MarkDown format;
- Update matrix inversion subroutine and give return values.

04/27/2021 FASP 2.6.7:
- Eamon Zhang reported several bugs;
- Fix the bug caused by inversion of smat matrices;
- Fix the bug cuased by uninitialized ILU param;
- Fix other small problems in DEBUG mode;
- Fix a bug in external.cmake for linking to MKL etc.

03/23/2021 FASP 2.6.6:
- Update CMake and add backup target;
- Saving coarse matrices for debugging.

03/13/2021 FASP 2.6.5: