@@ -1,5 +1,8 @@
 File Name: CHANGES
 
+08/28/2022 FASP 2.7.7:
+- Add output subroutine for MTX format;
+
 08/28/2022 FASP 2.7.6:
 - Prepare for Huawei's test problems;
 - Merge different versions;
